[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu/MenuOption.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/options.png" type="Texture" id=2]

[node name="Play" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
next_scene = ""

[node name="Options" type="Sprite" parent="."]

texture = ExtResource( 2 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 65, 13 )

[connection signal="gui_input" from="." to="." method="_on_gui_input"]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]


